--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,17 +3,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion compileSdkVersions
+    buildToolsVersion buildToolsVersions
 
     defaultConfig {
         applicationId "com.iamkamrul.expandablerecyclerviewlist"
-        minSdkVersion 15
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
+        minSdkVersion minSdkVersions
+        targetSdkVersion targetSdkVersions
+        versionCode versionCodes
+        versionName versionNames
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles 'consumer-rules.pro'
     }
 
     buildTypes {
@@ -27,11 +27,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation libraries.kotlinStdLib
+    implementation libraries.appCompat
+    implementation libraries.ktx
+    implementation libraries.recyclerView
+    implementation libraries.cardView
+    implementation libraries.constraintlayout
 }
